Fixed spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -456,7 +456,7 @@ hr {
     }
 
     .about {
-        max-width: 40vw;
+        max-width: 100vw;
     }
 
     .filters,
